--- a/.github/workflows/3-docker-build-deploy.yml
+++ b/.github/workflows/3-docker-build-deploy.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set version
@@ -50,8 +50,8 @@ jobs:
           file: ./app-react/Dockerfile
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:mobile-${{ env.VERSION }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:mobile-latest
+            ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:mobile-${{ env.VERSION }}
+            ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:mobile-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -63,8 +63,8 @@ jobs:
           context: ./scripts/docker/grafana
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:grafana-${{ env.VERSION }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:grafana-latest
+            ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:grafana-${{ env.VERSION }}
+            ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:grafana-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -76,8 +76,8 @@ jobs:
           context: ./scripts/docker/prometheus
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:prometheus-${{ env.VERSION }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:prometheus-latest
+            ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:prometheus-${{ env.VERSION }}
+            ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:prometheus-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -89,8 +89,8 @@ jobs:
           context: ./scripts/docker/sonarqube
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:sonarqube-${{ env.VERSION }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:sonarqube-latest
+            ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:sonarqube-${{ env.VERSION }}
+            ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:sonarqube-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -107,18 +107,18 @@ jobs:
 
           if [[ "${{ github.event.inputs.target }}" == "all" || "${{ github.event.inputs.target }}" == "mobile" ]]; then
             echo "Scanning mobile app image..."
-            trivy image --exit-code 0 --severity HIGH,CRITICAL --ignore-unfixed ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:mobile-${{ env.VERSION }} > mobile-scan.txt
+            trivy image --exit-code 0 --severity HIGH,CRITICAL --ignore-unfixed ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:mobile-${{ env.VERSION }} > mobile-scan.txt
           fi
 
           if [[ "${{ github.event.inputs.target }}" == "all" || "${{ github.event.inputs.target }}" == "monitoring" ]]; then
             echo "Scanning Grafana image..."
-            trivy image --exit-code 0 --severity HIGH,CRITICAL --ignore-unfixed ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:grafana-${{ env.VERSION }} > grafana-scan.txt
+            trivy image --exit-code 0 --severity HIGH,CRITICAL --ignore-unfixed ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:grafana-${{ env.VERSION }} > grafana-scan.txt
 
             echo "Scanning Prometheus image..."
-            trivy image --exit-code 0 --severity HIGH,CRITICAL --ignore-unfixed ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:prometheus-${{ env.VERSION }} > prometheus-scan.txt
+            trivy image --exit-code 0 --severity HIGH,CRITICAL --ignore-unfixed ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:prometheus-${{ env.VERSION }} > prometheus-scan.txt
 
             echo "Scanning SonarQube image..."
-            trivy image --exit-code 0 --severity HIGH,CRITICAL --ignore-unfixed ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:sonarqube-${{ env.VERSION }} > sonarqube-scan.txt
+            trivy image --exit-code 0 --severity HIGH,CRITICAL --ignore-unfixed ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:sonarqube-${{ env.VERSION }} > sonarqube-scan.txt
           fi
 
       # Test Docker image health checks
@@ -127,7 +127,7 @@ jobs:
           # Test de santé pour l'application mobile
           if [[ "${{ github.event.inputs.target }}" == "all" || "${{ github.event.inputs.target }}" == "mobile" ]]; then
             echo "Testing mobile app health check..."
-            docker run -d --name mobile-test -p 3000:3000 ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:mobile-${{ env.VERSION }}
+            docker run -d --name mobile-test -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:mobile-${{ env.VERSION }}
             sleep 10
             curl -f http://localhost:3000/ || (echo "::warning::Le health check de l'image mobile a échoué" && docker logs mobile-test)
             docker stop mobile-test
@@ -137,7 +137,7 @@ jobs:
           # Test de santé pour Grafana
           if [[ "${{ github.event.inputs.target }}" == "all" || "${{ github.event.inputs.target }}" == "monitoring" ]]; then
             echo "Testing Grafana health check..."
-            docker run -d --name grafana-test -p 3001:3000 ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:grafana-${{ env.VERSION }}
+            docker run -d --name grafana-test -p 3001:3000 ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:grafana-${{ env.VERSION }}
             sleep 10
             curl -f http://localhost:3001/api/health || (echo "::warning::Le health check de l'image Grafana a échoué" && docker logs grafana-test)
             docker stop grafana-test
@@ -145,7 +145,7 @@ jobs:
 
             # Test de santé pour Prometheus
             echo "Testing Prometheus health check..."
-            docker run -d --name prometheus-test -p 9090:9090 ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:prometheus-${{ env.VERSION }}
+            docker run -d --name prometheus-test -p 9090:9090 ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:prometheus-${{ env.VERSION }}
             sleep 10
             curl -f http://localhost:9090/-/healthy || (echo "::warning::Le health check de l'image Prometheus a échoué" && docker logs prometheus-test)
             docker stop prometheus-test
@@ -158,10 +158,10 @@ jobs:
           echo "* **Version:** ${{ env.VERSION }}" >> $GITHUB_STEP_SUMMARY
           echo "* **Target:** ${{ github.event.inputs.target }}" >> $GITHUB_STEP_SUMMARY
           echo "* **Deploy:** ${{ github.event.inputs.deploy }}" >> $GITHUB_STEP_SUMMARY
-          echo "* **Docker Hub Repository:** https://hub.docker.com/r/${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf" >> $GITHUB_STEP_SUMMARY
+          echo "* **Docker Hub Repository:** https://hub.docker.com/r/${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf" >> $GITHUB_STEP_SUMMARY
 
           if [[ "${{ github.event.inputs.target }}" == "all" || "${{ github.event.inputs.target }}" == "mobile" ]]; then
-            echo "* **Mobile App Image:** ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:mobile-${{ env.VERSION }}" >> $GITHUB_STEP_SUMMARY
+            echo "* **Mobile App Image:** ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:mobile-${{ env.VERSION }}" >> $GITHUB_STEP_SUMMARY
             echo "* **Mobile App Scan Results:**" >> $GITHUB_STEP_SUMMARY
             echo '```' >> $GITHUB_STEP_SUMMARY
             cat mobile-scan.txt >> $GITHUB_STEP_SUMMARY
@@ -169,9 +169,9 @@ jobs:
           fi
 
           if [[ "${{ github.event.inputs.target }}" == "all" || "${{ github.event.inputs.target }}" == "monitoring" ]]; then
-            echo "* **Grafana Image:** ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:grafana-${{ env.VERSION }}" >> $GITHUB_STEP_SUMMARY
-            echo "* **Prometheus Image:** ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:prometheus-${{ env.VERSION }}" >> $GITHUB_STEP_SUMMARY
-            echo "* **SonarQube Image:** ${{ secrets.DOCKERHUB_USERNAME }}/yourmedia-ecf:sonarqube-${{ env.VERSION }}" >> $GITHUB_STEP_SUMMARY
+            echo "* **Grafana Image:** ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:grafana-${{ env.VERSION }}" >> $GITHUB_STEP_SUMMARY
+            echo "* **Prometheus Image:** ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:prometheus-${{ env.VERSION }}" >> $GITHUB_STEP_SUMMARY
+            echo "* **SonarQube Image:** ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:sonarqube-${{ env.VERSION }}" >> $GITHUB_STEP_SUMMARY
 
             echo "* **Monitoring Images Scan Results:**" >> $GITHUB_STEP_SUMMARY
             echo '```' >> $GITHUB_STEP_SUMMARY
@@ -203,17 +203,24 @@ jobs:
       - name: Deploy monitoring containers
         if: ${{ github.event.inputs.target == 'all' || github.event.inputs.target == 'monitoring' }}
         env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+          DOCKER_REPO: yourmedia-ecf
           DOCKERHUB_REPO: yourmedia-ecf
           TF_MONITORING_EC2_PUBLIC_IP: ${{ secrets.TF_MONITORING_EC2_PUBLIC_IP }}
+          GRAFANA_ADMIN_PASSWORD: ${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
           GF_SECURITY_ADMIN_PASSWORD: ${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
-          DB_USERNAME: ${{ secrets.DB_USERNAME }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          RDS_USERNAME: ${{ secrets.RDS_USERNAME }}
+          RDS_PASSWORD: ${{ secrets.RDS_PASSWORD }}
+          DB_USERNAME: ${{ secrets.RDS_USERNAME }}
+          DB_PASSWORD: ${{ secrets.RDS_PASSWORD }}
+          RDS_ENDPOINT: ${{ secrets.TF_RDS_ENDPOINT }}
           TF_RDS_ENDPOINT: ${{ secrets.TF_RDS_ENDPOINT }}
           GITHUB_CLIENT_ID: ${{ secrets.GITHUB_CLIENT_ID || 'dummy-id' }}
           GITHUB_CLIENT_SECRET: ${{ secrets.GITHUB_CLIENT_SECRET || 'dummy-secret' }}
           EC2_SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+          EC2_SSH_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
         run: |
           chmod +x ./scripts/docker/docker-manager.sh
           ./scripts/docker/docker-manager.sh deploy monitoring
@@ -221,11 +228,14 @@ jobs:
       - name: Deploy app containers
         if: ${{ github.event.inputs.target == 'all' || github.event.inputs.target == 'mobile' }}
         env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+          DOCKER_REPO: yourmedia-ecf
           DOCKERHUB_REPO: yourmedia-ecf
           TF_EC2_PUBLIC_IP: ${{ secrets.TF_EC2_PUBLIC_IP }}
           EC2_SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+          EC2_SSH_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
         run: |
           chmod +x ./scripts/docker/docker-manager.sh
           ./scripts/docker/docker-manager.sh deploy mobile
