Nettoyage des scripts redondants et mise à jour des références

--- a/scripts/ec2-monitoring/docker-compose.yml
+++ b/scripts/ec2-monitoring/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   prometheus:
-    image: prom/prometheus:v2.45.0
+    image: medsin/yourmedia-ecf:prometheus-latest
     container_name: prometheus
     ports:
       - "9090:9090"
@@ -26,14 +26,14 @@ services:
     cpu_shares: 512
 
   grafana:
-    image: grafana/grafana:10.0.3
+    image: medsin/yourmedia-ecf:grafana-latest
     container_name: grafana
     ports:
       - "3000:3000"
     volumes:
       - /opt/monitoring/grafana-data:/var/lib/grafana
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-admin}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-YourMedia2025!}
       - GF_USERS_ALLOW_SIGN_UP=false
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
@@ -71,7 +71,7 @@ services:
 
   # SonarQube pour l'analyse de code
   sonarqube:
-    image: sonarqube:9.9-community
+    image: medsin/yourmedia-ecf:sonarqube-latest
     container_name: sonarqube
     depends_on:
       - sonarqube-db
@@ -106,12 +106,12 @@ services:
 
   # Exportateur CloudWatch pour surveiller les services AWS (S3, RDS, EC2)
   cloudwatch-exporter:
-    image: prom/cloudwatch-exporter:0.15.2
+    image: prom/cloudwatch-exporter:latest
     container_name: cloudwatch-exporter
     ports:
       - "9106:9106"
     volumes:
-      - /opt/monitoring/cloudwatch-config.yml:/config/cloudwatch-config.yml
+      - /opt/monitoring/cloudwatch-config/cloudwatch-config.yml:/config/cloudwatch-config.yml
     command: "--config.file=/config/cloudwatch-config.yml"
     restart: always
     logging:
